feat: AnsibleとTerraformの統合強化とWordPress設定の改善
- Ansible設定ファイルを更新し、Terraformの出力を自動的に取得する機能を追加
- WordPress設定をTerraformの値を優先するように修正し、環境変数の利用を強化
- 新規にTerraform変数を読み込むスクリプトを追加し、Ansible単独実行時の柔軟性を向上
- 不要なファイルを削除し、関連する設定を整理
- SSH接続設定を改善し、デフォルト値を設定
- WordPressのデータベース接続情報を統一し、セキュリティを向上

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,9 +1,8 @@
 [defaults]
-inventory = ansible/inventory/hosts.yml
-roles_path = ansible/roles
+inventory = inventory/
 host_key_checking = False
-remote_user = ec2-user
 private_key_file = ~/.ssh/ssh_key
-
-[ssh_connection]
-ssh_args = -o ControlMaster=auto -o ControlPersist=60s -o UserKnownHostsFile=/dev/null -o IdentitiesOnly=yes
+remote_user = ec2-user
+timeout = 30
+gathering = smart
+fact_caching = memory
