--- a/.github/workflows/terraform-config.yml
+++ b/.github/workflows/terraform-config.yml
@@ -190,7 +190,7 @@ jobs:
       - name: Generate deployment_config.json
         run: |
           # 環境変数の設定
-          export PROJECT="${{ github.event.inputs.project_name || 'wp-example' }}"
+          export PROJECT="${{ github.event.inputs.project_name || 'wp-project' }}"
           export DOMAIN_NAME="${{ github.event.inputs.domain_name || 'example.com' }}"
           export AWS_REGION="${{ github.event.inputs.aws_region || 'ap-northeast-1' }}"
           
