--- a/ansible/group_vars/wordpress.yml
+++ b/ansible/group_vars/wordpress.yml
@@ -1,6 +1,6 @@
 ---
 # WordPressサーバー用変数
-wordpress_domain: "{{ domain_name | default('example.com') }}"
+wordpress_domain: "{{ lookup('env', 'WORDPRESS_DOMAIN') | default(lookup('env', 'DOMAIN_NAME') | default('example.com')) }}"
 wordpress_locale: ja
 wordpress_language: ja
 
