--- a/ansible/roles/wordpress/defaults/main.yml
+++ b/ansible/roles/wordpress/defaults/main.yml
@@ -4,8 +4,7 @@
 # データベース設定
 wp_db_name: "wordpress"
 wp_db_user: "admin"
-wp_db_password: "{{ wordpress_db_password | default('your-secure-password-here') }}"
-wp_db_host: "{{ wordpress_db_host | default('localhost') }}"
+wp_db_password: "{{ lookup('env', 'WORDPRESS_DB_PASSWORD') | default('your-secure-password-here') }}"
 
 # WordPress設定
 wp_table_prefix: "wp_"
@@ -13,9 +12,7 @@ wp_debug: false
 wp_lang: "ja"
 
 # ドメイン設定
-wp_domain: "{{ wordpress_domain | default('example.com') }}"
-wp_site_url: "https://{{ wp_domain }}"
-wp_home_url: "https://{{ wp_domain }}"
+wordpress_domain: "{{ lookup('env', 'WORDPRESS_DOMAIN') | default(lookup('env', 'DOMAIN_NAME') | default('example.com')) }}"
 
 # SSL設定
 wp_force_ssl_admin: true
