feat: WordPressプロジェクトの設定を汎用化し、機密情報を保護
- .gitignoreにSSH鍵ファイルを追加し、機密情報を保護
- deployment_config.example.jsonのRDS識別子を汎用名に変更
- Terraform設定ファイルのプロジェクト名を汎用名に更新
- Ansible設定ファイルのデフォルトパスワードを安全な値に変更
- 不要なファイルを削除し、リポジトリの整理を実施

--- a/.github/workflows/setup-deployment.yml
+++ b/.github/workflows/setup-deployment.yml
@@ -117,7 +117,7 @@ jobs:
         {
             "production": {
                 "ec2_instance_id": "${{ steps.terraform_outputs.outputs.prod_ec2_id }}",
-                "rds_identifier": "wp-shamo-rds",
+                "rds_identifier": "wordpress-project-rds",
                 "wordpress_url": "https://${{ github.event.inputs.domain_name }}",
                 "backup_retention_days": 7,
                 "ssh_user": "ec2-user",
@@ -125,7 +125,7 @@ jobs:
             },
             "validation": {
                 "ec2_instance_id": "${{ steps.terraform_outputs.outputs.valid_ec2_id }}",
-                "rds_identifier": "wp-shamo-rds-validation",
+                "rds_identifier": "wordpress-project-rds-validation",
                 "wordpress_url": "http://validation-ip",
                 "test_timeout_minutes": 30,
                 "ssh_user": "ec2-user",
