feat: Ansible単体実行機能の追加と設定ファイルの更新
- terraform.tfvarsを直接読み込む機能を追加し、Ansible単体実行を可能にしました。
- deployment_config.jsonにEC2およびRDSの設定を追加し、環境変数の優先順位を明確化しました。
- PHP設定を強化し、メモリ制限やファイルサイズ制限を増加させました。
- WordPressのデータベース接続情報を統一し、セキュリティを向上させました。
- Ansibleのプレイブックやスクリプトを更新し、接続テストや環境設定の検証機能を強化しました。

--- a/ansible/group_vars/all/terraform_vars.yml
+++ b/ansible/group_vars/all/terraform_vars.yml
@@ -1,5 +1,11 @@
 domain_name: shamolife.com
 wordpress_domain: shamolife.com
-rds_endpoint: wp-shamo-rds.cjg0emy2snss.ap-northeast-1.rds.amazonaws.com:3306
-s3_bucket_name: wp-shamo-wp-shamo-s3-mf1euyms
-ssh_key_name: wp-shamo-ssh-key
+s3_bucket_name: wp-shamo-s3
+project_name: wp-shamo
+wordpress_url: https://shamolife.com
+wp_db_password: your-db-password
+wp_db_user: your-db-user
+wp_db_name: wordpress
+enable_ssl_setup: true
+enable_lets_encrypt: true
+lets_encrypt_email: wata2watter0903@gmail.com
