--- a/ansible/templates/env.template
+++ b/ansible/templates/env.template
@@ -10,7 +10,7 @@
 export WORDPRESS_DB_HOST="your-rds-endpoint:3306"
 export WORDPRESS_DB_NAME="wordpress"
 export WORDPRESS_DB_USER="your-db-user"
-export WORDPRESS_DB_PASSWORD="your-db-password"
+export WORDPRESS_DB_PASSWORD="your-secure-password-here"
 export WORDPRESS_DB_CHARSET="utf8mb4"
 export WORDPRESS_DB_COLLATE=""
 
@@ -36,10 +36,28 @@ export WORDPRESS_DISALLOW_FILE_EDIT="true"
 export WORDPRESS_DISALLOW_FILE_MODS="true"
 
 # PHP設定
-export PHP_MEMORY_LIMIT="256M"
+export PHP_MEMORY_LIMIT="512M"
 export PHP_MAX_EXECUTION_TIME="300"
-export PHP_UPLOAD_MAX_FILESIZE="64M"
-export PHP_POST_MAX_SIZE="64M"
+export PHP_MAX_INPUT_TIME="300"
+export PHP_UPLOAD_MAX_FILESIZE="256M"
+export PHP_POST_MAX_SIZE="512M"
+export PHP_DISPLAY_ERRORS="Off"
+export PHP_LOG_ERRORS="On"
+export PHP_SESSION_GC_MAXLIFETIME="1440"
+export PHP_SESSION_COOKIE_HTTPONLY="1"
+export PHP_EXPOSE_PHP="Off"
+export PHP_ALLOW_URL_FOPEN="Off"
+export PHP_ALLOW_URL_INCLUDE="Off"
+
+# OPcache設定
+export PHP_OPCACHE_ENABLE="1"
+export PHP_OPCACHE_MEMORY_CONSUMPTION="128"
+export PHP_OPCACHE_INTERNED_STRINGS_BUFFER="8"
+export PHP_OPCACHE_MAX_ACCELERATED_FILES="4000"
+export PHP_OPCACHE_REVALIDATE_FREQ="2"
+export PHP_OPCACHE_FAST_SHUTDOWN="1"
+
+# 日付設定
 export PHP_DATE_TIMEZONE="Asia/Tokyo"
 
 # 監視設定
