feat: WordPress設定の統一と新規デバッグプレイブックの追加
- WordPressのドメイン設定を一貫性のある形式に統一し、環境変数からの取得を強化
- 新たにデバッグ用のプレイブックを追加し、変数の確認やデバッグを容易にする機能を実装
- Apacheのサービス起動を設定完了後に行うように修正し、タスクの順序を最適化
- Terraformからの出力を利用してデータベースユーザー名を設定する機能を追加し、セキュリティを向上

--- a/ansible/group_vars/wordpress.yml
+++ b/ansible/group_vars/wordpress.yml
@@ -1,6 +1,6 @@
 ---
 # WordPressサーバー用変数
-wordpress_domain: "{{ wordpress_domain | default('shamolife.com') }}"
+wordpress_domain: "{{ domain_name | default('example.com') }}"
 wordpress_locale: ja
 wordpress_language: ja
 
